--- a/index.html
+++ b/index.html
@@ -461,54 +461,8 @@
 
         </div>
         <!-- Galerie-Bilder -->
-        <div class="container">
-            <div class="row">
-
-                <div class="col-md-4 mb-4">
-                    <img src="img/gallery/diespeckmaeuse9.jpg" class="img-fluid  gallery-img" alt="Bild 9"
-                        data-index="0" loading="lazy">
-                </div>
-                <div class="col-md-4 mb-4">
-                    <img src="img/gallery/diespeckmaeuse4.jpg" class="img-fluid  gallery-img" alt="Bild 4"
-                        data-index="1" loading="lazy">
-                </div>
-                <div class="col-md-4 mb-4">
-                    <img src="img/gallery/diespeckmaeuse6.jpg" class="img-fluid  gallery-img" alt="Bild 6"
-                        data-index="2" loading="lazy">
-                </div>
-                <div class="col-md-4 mb-4">
-                    <img src="img/gallery/diespeckmaeuse5.jpg" class="img-fluid  gallery-img" alt="Bild 5"
-                        data-index="3" loading="lazy">
-                </div>
-                <div class="col-md-4 mb-4">
-                    <img src="img/gallery/diespeckmaeuse2.jpg" class="img-fluid  gallery-img" alt="Bild 2"
-                        data-index="4" loading="lazy">
-                </div>
-                <div class="col-md-4 mb-4">
-                    <img src="img/gallery/diespeckmaeuse7.jpg" class="img-fluid  gallery-img" alt="Bild 7"
-                        data-index="5" loading="lazy">
-                </div>
-                <div class="col-md-4 mb-4">
-                    <img src="img/gallery/diespeckmaeuse8.jpg" class="img-fluid  gallery-img" alt="Bild 8"
-                        data-index="6" loading="lazy">
-                </div>
-                <div class="col-md-4 mb-4">
-                    <img src="img/gallery/diespeckmaeuse11.jpg" class="img-fluid  gallery-img" alt="Bild 11"
-                        data-index="7" loading="lazy">
-                </div>
-                <div class="col-md-4 mb-4">
-                    <img src="img/gallery/diespeckmaeuse1.jpg" class="img-fluid  gallery-img" alt="Bild 1"
-                        data-index="8" loading="lazy">
-                </div>
-                <div class="col-md-4 mb-4">
-                    <img src="img/gallery/diespeckmaeuse3.jpg" class="img-fluid  gallery-img" alt="Bild 3"
-                        data-index="9">
-                </div>
-                <div class="col-md-4 mb-4">
-                    <img src="img/gallery/diespeckmaeuse12.jpg" class="img-fluid  gallery-img" alt="Bild 12"
-                        data-index="10">
-                </div>
-            </div>
+        <div class="container my-5">
+          <div class="row" id="gallery"></div>
         </div>
     </section>
 
@@ -583,6 +537,14 @@
     <section id="presse" class="py-5">
         <div class="container">
             <h2 class="section-title">Presse</h2>
+            <p><span> Fränkische Landeszeitung, 12.09.2025:</span><br>
+                <div class="pdf-viewer-container"
+                style="display: flex; justify-content: flex-start; align-items: flex-start;">
+                <iframe
+                    src="https://diespeckmäuse.de/js/pdfjs/web/viewer.html?file=https://diespeckmäuse.de/pdf/FLZ_12092025.pdf#zoom=page-fit"
+                    style="width: 100%; height: 48vh;" frameborder="0"></iframe>
+            </div>
+            </p>
             <p><span> Fränkische Landeszeitung, 28.07.2025:</span><br>
                 <div class="pdf-viewer-container"
                 style="display: flex; justify-content: flex-start; align-items: flex-start;">
@@ -675,65 +637,8 @@
                 </div>
                 <div class="modal-body p-0">
                     <div id="galleryCarousel" class="carousel slide" data-ride="carousel">
-                        <ol class="carousel-indicators">
-                            <li data-target="#galleryCarousel" data-slide-to="0" class="active"></li>
-                            <li data-target="#galleryCarousel" data-slide-to="1"></li>
-                            <li data-target="#galleryCarousel" data-slide-to="2"></li>
-                            <li data-target="#galleryCarousel" data-slide-to="3"></li>
-                            <li data-target="#galleryCarousel" data-slide-to="4"></li>
-                            <li data-target="#galleryCarousel" data-slide-to="5"></li>
-                            <li data-target="#galleryCarousel" data-slide-to="6"></li>
-                            <li data-target="#galleryCarousel" data-slide-to="7"></li>
-                            <li data-target="#galleryCarousel" data-slide-to="8"></li>
-                            <li data-target="#galleryCarousel" data-slide-to="9"></li>
-                            <li data-target="#galleryCarousel" data-slide-to="10"></li>
-                        </ol>
-                        <div class="carousel-inner">
-                            <div class="carousel-item active">
-                                <img class="d-block w-100" src="img/gallery/diespeckmaeuse9.jpg" alt="Bild 1"
-                                    loading="lazy">
-                            </div>
-                            <div class="carousel-item">
-                                <img class="d-block w-100" src="img/gallery/diespeckmaeuse4.jpg" alt="Bild 2"
-                                    loading="lazy">
-                            </div>
-                            <div class="carousel-item">
-                                <img class="d-block w-100" src="img/gallery/diespeckmaeuse6.jpg" alt="Bild 3"
-                                    loading="lazy">
-                            </div>
-                            <div class="carousel-item">
-                                <img class="d-block w-100" src="img/gallery/diespeckmaeuse5.jpg" alt="Bild 4"
-                                    loading="lazy">
-                            </div>
-                            <div class="carousel-item">
-                                <img class="d-block w-100" src="img/gallery/diespeckmaeuse2.jpg" alt="Bild 5"
-                                    loading="lazy">
-                            </div>
-                            <div class="carousel-item">
-                                <img class="d-block w-100" src="img/gallery/diespeckmaeuse7.jpg" alt="Bild 6"
-                                    loading="lazy">
-                            </div>
-                            <div class="carousel-item">
-                                <img class="d-block w-100" src="img/gallery/diespeckmaeuse8.jpg" alt="Bild 7"
-                                    loading="lazy">
-                            </div>
-                            <div class="carousel-item">
-                                <img class="d-block w-100" src="img/gallery/diespeckmaeuse11.jpg" alt="Bild 8"
-                                    loading="lazy">
-                            </div>
-                            <div class="carousel-item">
-                                <img class="d-block w-100" src="img/gallery/diespeckmaeuse1.jpg" alt="Bild 9"
-                                    loading="lazy">
-                            </div>
-                            <div class="carousel-item">
-                                <img class="d-block w-100" src="img/gallery/diespeckmaeuse3.jpg" alt="Bild 10"
-                                    loading="lazy">
-                            </div>
-                            <div class="carousel-item">
-                                <img class="d-block w-100" src="img/gallery/diespeckmaeuse12.jpg" alt="Bild 11"
-                                    loading="lazy">
-                            </div>
-                        </div>
+                        <ol class="carousel-indicators"></ol>
+                        <div class="carousel-inner"></div>
                         <a class="carousel-control-prev" href="#galleryCarousel" role="button" data-slide="prev">
                             <span class="carousel-control-prev-icon" aria-hidden="true"></span>
                             <span class="sr-only">Zurück</span>
@@ -778,24 +683,72 @@
     </div>
 
     <!-- Scripts -->
+
     <script src="js/jquery-3.5.1.slim.min.js"></script>
     <script src="js/popper.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
     <script>
-        $(document).ready(function () {
-            // Collapse the navbar on nav-link click
-            $('.navbar-nav>li>a').on('click', function () {
-                $('.navbar-collapse').collapse('hide');
-            });
 
-            // When a gallery image is clicked, open the modal and jump to the correct slide
-            $('.gallery-img').on('click', function () {
-                var index = $(this).data('index');
-                $('#galleryModal').modal('show');
-                $('#galleryCarousel').carousel(parseInt(index, 10));
+    // Fisher–Yates Shuffle-Funktion
+    function shuffle(array) {
+      for (let i = array.length - 1; i > 0; i--) {
+        const j = Math.floor(Math.random() * (i + 1));
+        [array[i], array[j]] = [array[j], array[i]];
+      }
+    }
+
+    // Dynamisches Laden der Galerie aus gallery.json und Initialisierung des Modal-Karussells
+    document.addEventListener('DOMContentLoaded', function() {
+      fetch('gallery.json')
+        .then(response => response.json())
+        .then(allImages => {
+          shuffle(allImages);
+          const selected = allImages.slice(0, 9);
+          const gallery = document.getElementById('gallery');
+          selected.forEach((src, index) => {
+            const col = document.createElement('div');
+            col.className = 'col-md-4 mb-4';
+            const img = document.createElement('img');
+            img.src = src;
+            img.className = 'img-fluid gallery-img';
+            img.setAttribute('data-index', index);
+            img.setAttribute('alt', '');
+            img.setAttribute('loading', 'lazy');
+            col.appendChild(img);
+            gallery.appendChild(col);
+          });
+
+          // Build carousel indicators and slides dynamically
+          const indicators = document.querySelector('#galleryCarousel .carousel-indicators');
+          const inner = document.querySelector('#galleryCarousel .carousel-inner');
+          selected.forEach((src, i) => {
+            // Indicator
+            const li = document.createElement('li');
+            li.setAttribute('data-target', '#galleryCarousel');
+            li.setAttribute('data-slide-to', i);
+            if (i === 0) li.classList.add('active');
+            indicators.appendChild(li);
+            // Slide
+            const slide = document.createElement('div');
+            slide.className = 'carousel-item' + (i === 0 ? ' active' : '');
+            slide.innerHTML = `<img class="d-block w-100" src="${src}" alt="" loading="lazy">`;
+            inner.appendChild(slide);
+          });
+
+          // Klick-Handler für Modal-Karussell
+          document.querySelectorAll('.gallery-img').forEach(imgEl => {
+            imgEl.addEventListener('click', function() {
+              const idx = parseInt(this.getAttribute('data-index'), 10);
+              $('#galleryModal').modal('show');
+              $('#galleryCarousel').carousel(idx);
             });
-        });
+          });
+        })
+        .catch(error => console.error('Fehler beim Laden der Galerie:', error));
+    });
     </script>
+    
+
 
     <!-- Insta pop up -->
     <script>
